[package]
name = "nixpkgs-pr-build-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
frankenstein = { version = "0.37.0", default-features = false, features = ["async-http-client", "async-telegram-trait"] }
once_cell = "1.20.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["macros", "process", "rt-multi-thread", "time"] }
