[package]
name = "nixpkgs-pr-build-bot"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["FliegendeWurst <arne.keller@posteo.de>"]

[dependencies]
anyhow = "1.0.95"
brace-expand = "0.1.0"
bytes = "1.9.0"
frankenstein = { version = "0.37.0", default-features = false, features = ["async-http-client", "async-telegram-trait"] }
once_cell = "1.20.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde_json = "1"
strip-ansi-escapes = "0.2.0"
sysinfo = { version = "0.33.1", default-features = false, features = ["disk"] }
tokio = { version = "1.42.0", features = ["macros", "process", "rt-multi-thread", "time"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
